# xlsx_batch_reader

./: .gitignore  Cargo.toml  README.md  changelog.md  changelogs.md
examples/: cached_batch_reader.rs  cached_reader.rs  dev.rs  merged_range.rs  partial_batch_reader.rs  read_datatime.rs  simple_batch_reader.rs  simple_batch_writer.rs  simple_writer.rs  write_row_by_name.rs
src/: lib.rs
src/read/: mod.rs
src/write/: mod.rs
tests/: itest.rs
